--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "grpc": "^1.17.0",
     "grpc-tools": "^1.6.6",
     "grpc_tools_node_protoc_ts": "^2.4.2",
     "i": "^0.3.6",
